@@ -78,6 +78,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Require the API to have 64-bit streams support.
       Make device descriptions more useful, make dagN conditional.
       Use PCAP_ERROR_NO_SUCH_DEVICE more in dag_activate().
+      Validate capture device names better.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.6 libpcap release (so far!)
